Correct contrast issues
WAVE flagged several elements with contrast problems. I've tried to address these issues the best I can, but I'm not going to darken the link text enough for it to pass. I've made the link text bold and it becomes darker on hover.

--- a/src/assets/style/base/_elements.scss
+++ b/src/assets/style/base/_elements.scss
@@ -3,8 +3,9 @@
 ------------------------------------------------------------------ */
 
 a:not([class]) {
-  @include txt-color(blue);
+  @include txt-color(blue, 500);
   text-decoration: none;
+  font-weight: bold;
 
   &:hover, &:focus {
     @include txt-color(blue, 800);
